<resources>
    <string name="app_name">SynUpTest</string>
    <string name="variant_category">Variant Category</string>
    <string name="variant_combination">Variant Combination</string>
    <string name="select_crust">Select Crust</string>
    <string name="select_size">Select Size</string>
    <string name="select_sauce">Select Sauce</string>
    <string name="image_to_displayed">Image To Displayed</string>
    <string name="retry">Retry</string>
    <string name="turn_on_wifi">Turn or your wifi</string>

</resources>
