...
        android:id="@+id/retry"/>
    <ProgressBar
        android:layout_width= "wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible"
        android:id="@+id/progress_circular"
        android:indeterminateDrawable="@drawable/data_loading"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
